feat:Find out the accuracy of human faces
	The haar cascade classifier was used to check if the dogs face
were classified as human faces or not. With 12% loss it was able.

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,21 +224,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Answer:__ \n",
-    "(You can print out your results and/or write your percentages in this cell)"
+    "__Answer:__  \n",
+    "\n",
+    "99.00% in sample human dataset is classified as human face.\n",
+    "\n",
+    "12.00% in sample dog dataset is classified as human face.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected faces in 99.00% of the sample human dataset.\n",
-      "Detected faces in 12.00% of the sample dog dataset.\n"
+      " 99.00% in sample human dataset is classified as human face.\n",
+      " 12.00% in sample dog dataset is classified as human face.\n"
      ]
     }
    ],
@@ -255,8 +258,8 @@
     "dog_faces = faces_vfunc(dog_files_short)\n",
     "\n",
     "# Calculate and print percentage of faces in each set\n",
-    "print('Detected faces with {:.2f}% in sample human dataset.'.format((sum(human_faces)/len(human_faces))*100))\n",
-    "print('Detected faces with {:.2f}% in sample dog dataset.'.format((sum(dog_faces)/len(dog_faces))*100))\n",
+    "print(' {:.2f}% in sample human dataset is classified as human face.'.format((sum(human_faces)/len(human_faces))*100))\n",
+    "print(' {:.2f}% in sample dog dataset is classified as human face.'.format((sum(dog_faces)/len(dog_faces))*100))\n",
     "## TODO: Test the performance of the face_detector algorithm \n",
     "## on the images in human_files_short and dog_files_short.\n"
    ]
@@ -270,10 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -298,10 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -316,6 +315,76 @@
     "# move model to GPU if CUDA is available\n",
     "if use_cuda:\n",
     "    VGG16 = VGG16.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MEANS = [0.485, 0.456, 0.406]\n",
+    "DEVIATIONS = [0.229, 0.224, 0.225]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#from PIL import Image\n",
+    "#import torchvision.transforms as transforms\n",
+    "#from torch.autograd import Variable\n",
+    "\n",
+    "def process_image_to_tensor(image):\n",
+    "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
+    "        returns an tensor array\n",
+    "\n",
+    "    As per Pytorch documentations: All pre-trained models expect input images normalized in the same way, \n",
+    "    i.e. mini-batches of 3-channel RGB images\n",
+    "    of shape (3 x H x W), where H and W are expected to be at least 224. \n",
+    "    The images have to be loaded in to a range of [0, 1] and \n",
+    "    then normalized using mean = [0.485, 0.456, 0.406] and std = [0.229, 0.224, 0.225]. \n",
+    "    You can use the following transform to normalize:\n",
+    "    '''\n",
+    "    # define transforms for the training data and testing data\n",
+    "    prediction_transforms = transforms.Compose([transforms.Resize(param_transform_resize),\n",
+    "                                          transforms.CenterCrop(param_transform_crop),\n",
+    "                                          transforms.ToTensor(),\n",
+    "                                          transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                               [0.229, 0.224, 0.225])])\n",
+    "    \n",
+    "    img_pil = Image.open( image ).convert('RGB')\n",
+    "    img_tensor = prediction_transforms( img_pil )[:3,:,:].unsqueeze(0)\n",
+    "    \n",
+    "    return img_tensor\n",
+    "\n",
+    "\n",
+    "# helper function for un-normalizing an image  - from STYLE TRANSFER exercise\n",
+    "# and converting it from a Tensor image to a NumPy image for display\n",
+    "def image_convert(tensor):\n",
+    "    \"\"\" Display a tensor as an image. \"\"\"\n",
+    "    \n",
+    "    image = tensor.to(\"cpu\").clone().detach()\n",
+    "    image = image.numpy().squeeze()\n",
+    "    image = image.transpose(1,2,0)\n",
+    "    image = image * np.array((0.229, 0.224, 0.225)) + np.array((0.485, 0.456, 0.406))\n",
+    "    image = image.clip(0, 1)\n",
+    "\n",
+    "    return image\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stri =  '/home/vyshak/MCA_Projects/Dog_Classification/dogImages/train/133.Yorkshire_terrier/Yorkshire_terrier_08314.jpg'\n",
+    "imgw = cv2.imread(stri)\n",
+    "cv2.imshow('image',imgw)"
    ]
   },
   {
@@ -338,10 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -362,12 +429,91 @@
     "    Returns:\n",
     "        Index corresponding to VGG-16 model's prediction\n",
     "    '''\n",
+    "    img = cv2.imread(img_path)\n",
+    "#     data_transform = transforms.Compose([transforms.RandomResizedCrop(224),transforms.ToTensor()])\n",
+    "    \n",
+    "    \n",
+    "    prediction = VGG16(img)\n",
+    "\n",
+    "    index = prediction.data.numpy().argmax()\n",
+    "        \n",
     "    \n",
     "    ## TODO: Complete the function.\n",
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
     "    \n",
-    "    return None # predicted class index"
+    "    return index # predicted class index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cv2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-5a8a8a6fd8f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mstri\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m'/home/vyshak/MCA_Projects/Dog_Classification/dogImages/train/133.Yorkshire_terrier/Yorkshire_terrier_08314.jpg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mimgw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstri\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimgw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# VGG16_predict(stri)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # VGG16_predict(stri)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cv2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "stri =  '/home/vyshak/MCA_Projects/Dog_Classification/dogImages/train/133.Yorkshire_terrier/Yorkshire_terrier_08314.jpg'\n",
+    "imgw = imread(stri)\n",
+    "imshow(imgw)\n",
+    "# VGG16_predict(stri)\n",
+    "# # VGG16_predict(stri)\n",
+    "\n",
+    "tensor = torch.from_numpy(img)\n",
+    "\n",
+    "# tensor.type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision\n",
+    "print(torchvision.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'torchvision.transforms' has no attribute 'Resize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-81-8665c9682881>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_tensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_image_to_tensor\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mstri\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_tensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_convert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-69-1e40775ff7c0>\u001b[0m in \u001b[0;36mprocess_image_to_tensor\u001b[0;34m(image)\u001b[0m\n\u001b[1;32m     15\u001b[0m     '''\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# define transforms for the training data and testing data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     prediction_transforms = transforms.Compose([transforms.Resize(param_transform_resize),\n\u001b[0m\u001b[1;32m     18\u001b[0m                                           \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCenterCrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_transform_crop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m                                           \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torchvision.transforms' has no attribute 'Resize'"
+     ]
+    }
+   ],
+   "source": [
+    "test_tensor = process_image_to_tensor( stri )\n",
+    "print(test_tensor.shape)\n",
+    "plt.imshow(image_convert(test_tensor))"
    ]
   },
   {
@@ -384,16 +530,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
     "    ## TODO: Complete the function.\n",
-    "    \n",
-    "    return None # true/false"
+    "    index = VGG16_predict(img_path)\n",
+    "    return (151 <= index and index <= 268) # true/false"
    ]
   },
   {
@@ -417,9 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
@@ -436,9 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -487,9 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -527,9 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -582,9 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
@@ -608,9 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the following import is required for training to be robust to truncated images\n",
@@ -683,9 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test(loaders, model, criterion, use_cuda):\n",
@@ -741,9 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: Specify data loaders\n"
@@ -761,9 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.models as models\n",
@@ -802,9 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "criterion_transfer = None\n",
@@ -823,9 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# train the model\n",
@@ -847,9 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test(loaders_transfer, model_transfer, criterion_transfer, use_cuda)"
@@ -867,9 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Write a function that takes a path to an image as input\n",
@@ -909,9 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
@@ -949,9 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: Execute your algorithm from Step 6 on\n",
